introduce flex property on the intro div

--- a/index.css
+++ b/index.css
@@ -22,12 +22,6 @@
 .s{
   color: red;
 }
-.title{
-  float: left;
-}
-.name{
-  float: left;
-}
-nav{
-  margin: 20px;
+.intro{
+  display: flex;
 }
