--- a/index.css
+++ b/index.css
@@ -30,4 +30,10 @@ nav{
 }
 nav ul li {
   display: inline;
+  padding: 25px;
+}
+nav ul li a{
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
 }
