--- a/index.css
+++ b/index.css
@@ -2,13 +2,23 @@
   margin-left: 10%;
 }
 .project1{
-  width: 500px;
+  width: 350px;
+  height: 200px;
+  padding-right: 10px;
 }
 .delani{
-  width: 500px; 
+  width: 350px;
+  height: 200px;
+  padding-right: 10px; 
 }
 .photographer{
-  width: 500px;
+  width: 350px;
+  height: 200px;
+}
+.gallery{
+  width: 55%;
+  display: flex;
+  flex-direction: row;
 }
 .title{
   font-size: 50px;
@@ -20,7 +30,7 @@
   margin-left: 50px;
   padding-top: 7px;
   padding-bottom: 7px;
-  padding-right: 470px;
+  padding-right: 600px;
   padding-left: 30px;
   border: 2px solid grey;
   border-radius: 20px;
@@ -42,19 +52,29 @@
 }
 .intro{
   display: flex;
+  background-color: rgb(224, 217, 217);
 }
 nav{
   margin-top: 15px;
 }
 nav ul li {
+  margin-left: 0px;
   display: inline;
-  padding: 25px;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding: 10px;
 }
 nav ul li a{
+  padding: 5px;
   text-decoration: none;
   color: black;
   font-size: 18px;
+  border: 2px solid gray;
+  border-radius: 20px;
+}
+nav ul li a:hover{
+  color: blue;
+  border: 2px solid grey;
+  padding: 5px;
 }
 .img h2{
   color: blue;
@@ -64,10 +84,19 @@ nav ul li a{
   font-size: 24px;
   text-decoration: underline;
 }
+.h4:hover{
+  text-decoration: none;
+  font-style: oblique;
+}
 .green{
   color: green;
   margin-top: 0;
 }
-.img{
-
+footer{
+  background-color: rgb(224, 217, 217);
 }
+imgcaption a {
+  color:rgb(3, 3, 151);
+  text-decoration: none;
+}
+imgcaption a: 
