--- a/index.css
+++ b/index.css
@@ -54,6 +54,21 @@
   display: flex;
   background-color: rgb(224, 217, 217);
 }
+.greetings{
+  float: right;
+  display: flex;
+  margin-right: 190px;
+}
+.greetings .p1 {
+  font-size: 50px;
+  padding-right: 16px;
+  border-right: 2px solid gray;
+}
+.greetings .p2{
+  font-size: 18px;
+  padding-left: 10px;
+  margin-top: 49px;
+}
 nav{
   margin-top: 15px;
 }
