--- a/index.css
+++ b/index.css
@@ -52,12 +52,13 @@
 }
 .intro{
   display: flex;
-  background-color: rgb(224, 217, 217);
 }
 .greetings{
   float: right;
   display: flex;
   margin-right: 190px;
+  border: 2px solid gray;
+  border-radius: 10px;
 }
 .greetings .p1 {
   font-size: 50px;
@@ -67,16 +68,17 @@
 .greetings .p2{
   font-size: 18px;
   padding-left: 10px;
+  padding-right: 10px;
   margin-top: 49px;
+  color: blue;
 }
 nav{
   margin-top: 15px;
+  border-bottom: 1px solid grey;
 }
 nav ul li {
-  margin-left: 0px;
   display: inline;
   padding-top: 10px;
-  padding: 10px;
 }
 nav ul li a{
   padding: 5px;
