--- a/index.css
+++ b/index.css
@@ -56,7 +56,8 @@
 .greetings{
   float: right;
   display: flex;
-  margin-right: 190px;
+  margin-top: 6%;
+  margin-right: 22%;
   border: 2px solid gray;
   border-radius: 10px;
 }
@@ -79,6 +80,7 @@ nav{
 nav ul li {
   display: inline;
   padding-top: 10px;
+  padding-right: 45px;
 }
 nav ul li a{
   padding: 5px;
@@ -90,7 +92,7 @@ nav ul li a{
 }
 nav ul li a:hover{
   color: blue;
-  border: 2px solid grey;
+  border: 2px solid blue;
   padding: 5px;
 }
 .img h2{
