--- a/index.css
+++ b/index.css
@@ -53,25 +53,30 @@
 .intro{
   display: flex;
 }
-.greetings{
-  float: right;
+.grid{
   display: flex;
-  margin-top: 6%;
-  margin-right: 22%;
+  flex-direction: column;
+}
+.greetings{
   border: 2px solid gray;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  float: right;
 }
 .greetings .p1 {
+  float: left;
   font-size: 50px;
   padding-right: 16px;
   border-right: 2px solid gray;
 }
 .greetings .p2{
+  float: left;
   font-size: 18px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-top: 49px;
   color: blue;
+}
+.greetings .p3{
+ 
 }
 nav{
   margin-top: 15px;
