--- a/index.css
+++ b/index.css
@@ -121,7 +121,18 @@ footer{
   justify-content: center;
 }
 footer h4{
-  margin-left: 7px;
+  text-align: center;
+  text-transform: uppercase;
+}
+footer ul li{
+  text-align: center;
+  list-style: none;
+  padding: 5px;
+}
+.follow{
+  color: blue;
+  font-style: italic;
+  text-decoration: none;
 }
 imgcaption a {
   color:rgb(3, 3, 151);
