--- a/index.css
+++ b/index.css
@@ -1,6 +1,25 @@
 .container{
   margin-left: 10%;
 }
+.port{
+  text-align: center;
+  text-transform: uppercase;
+}
+.h{
+  color: blue;
+}
+.e{
+  color: red;
+}
+.x{
+  color: rgb(219, 219, 8);
+}
+.y{
+  color: green;
+}
+.z{
+  color: red;
+}
 .project1{
   width: 350px;
   height: 200px;
@@ -63,6 +82,7 @@
   display: flex;
   flex-direction: column;
   float: right;
+  margin-right: 24%;
 }
 .greetings .p1 {
   float: left;
@@ -74,9 +94,7 @@
   float: left;
   font-size: 18px;
   color: blue;
-}
-.greetings .p3{
- 
+  padding-left: 5px; 
 }
 nav{
   margin-top: 15px;
